tests/sem/pass/type_cast_multi.c
void main() {
    int i[213];
    int* kk;
    kk=(int*)(char*)(int*)i;
    
}