tests/sem/error/shadow_args.c
void sekiro(int a, int* a, char a) {}

void main() {
}

